--- a/style.css
+++ b/style.css
@@ -1,15 +1,35 @@
-#new-nav {
-    background-color: #3ca861;
+#avatar {
+    cursor: pointer;
 }
 
-h3 {
-    padding-top: 110px;
+#first-col {
+    padding: 0px;
 }
 
-.top {
-    margin-top: 15px;
-    margin-bottom: 15px;
+#nav {
+    padding-left: 0px;
+    padding-right: 0px;
+    border-left: none;
+    border-right: none;
 }
+
+#top {
+    width: 103%;
+}
+
+.delimiter {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 280px;
+    border: solid #D2D2D2 1px;
+    width: 100%;
+    background-color: #ffffff;
+    background-image: url("./images/diagonal-striped-brick.png");
+    background-repeat: repeat;
+
+}
+
+
 
 /* ----------------------------- */
 .fixed-nav {
@@ -18,10 +38,11 @@ h3 {
     position: fixed;
     top: -100px;
     left: 0;
-    width: 102%;
+    width: 103%;
     transition: transform .5s;
     transform: translateY(100px)
 }
+
 /* ----------------------------- */
 
 .main {
@@ -31,6 +52,7 @@ h3 {
 .left-margin-15 {
     margin-left: 15px;
 }
+
 
 @media (min-width: 1000px) {
     .navbar-nav {
