--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,24 @@ body {
 
 footer {
     border-top: solid #E5E5E5 1px;
-    position: fixed;
+    position: relative;
     bottom: 0;
-    left: 0;
-    right: 0;
+    margin-top: -30px;
     text-align: center;
     text-transform: uppercase;
     font-size: 11px;
-    padding: 5px;
+    padding: 10px;
+    clear: both;
     font-weight: bold;
     background: white;
+}
+
+#root {
+    height: 100vh;
+}
+
+div.container {
+    min-height: 86.5%;
 }
 
 .align-right {
@@ -40,7 +48,7 @@ footer {
 }
 
 
-#first-col-left, #first-col-right{
+#first-col-left, #first-col-right {
     padding: 0px;
 }
 
@@ -116,7 +124,7 @@ div#certificate-details {
 }
 
 .enlarge {
-    transition:transform 0.25s ease;
+    transition: transform 0.25s ease;
     border: 1px solid #ddd;
     padding: 5px;
     margin: 20px;
@@ -124,14 +132,33 @@ div#certificate-details {
 }
 
 .enlarge:hover {
-    -webkit-transform:scale(1.5); /* or some other value */
-    transform:scale(1.5);
+    -webkit-transform: scale(1.5); /* or some other value */
+    transform: scale(1.5);
     box-shadow: 0 0 2px 1px rgba(183, 183, 183, 0.5);
 }
 
 .verify {
     margin-bottom: 60px;
     font-size: 15px;
+}
+
+#nav {
+    padding-left: 0px;
+    padding-right: 0px;
+    border-left: none;
+    border-right: none;
+}
+
+.fixed-nav {
+    z-index: 1000;
+    background: #fff;
+    box-shadow: 0 5px 10px -10px rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    transition: transform .5s;
+    transform: translateY(100px)
 }
 
 
