--- a/views/array/education/softuni.hbs
+++ b/views/array/education/softuni.hbs
@@ -1,5 +1,5 @@
 {{> header}}
-<div class="container education">
+<div class="container array">
     <div class="row">
         <div class="col text-center">
             <h2>SoftUni</h2>
