--- a/views/common/permissions.hbs
+++ b/views/common/permissions.hbs
@@ -1,5 +1,5 @@
 {{> header}}
-<div class="container permissions">
+<div class="container array">
     <div class="row">
         <div class="col">
             <h4 style="text-align:center; color:#b7b7b7" >Hi there,<br><br>to see this page<br>you need to <a style="color: #1A1A1A" href="#/login">login</a><br><br>Thanks!
