--- a/views/array/education/certificateDetails.hbs
+++ b/views/array/education/certificateDetails.hbs
@@ -1,5 +1,5 @@
 {{> header}}
-<div class="container education">
+<div class="container array">
     <div class="row">
         <div class="col text-center">
             <h2 style="margin-bottom: 20px;">Details</h2>
@@ -9,7 +9,7 @@
                 <img class="cert-details" src="{{firstUrl}}">
                 <img class="cert-details" src="{{secondUrl}}">
                 <p class="verify" >Verification link:<br><a style="color: #1A1A1A;" href="{{description}}" target="_blank">{{description}}</a></p>
-                <button style="margin-bottom: 50px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/softuni'">Back to SoftUni</button>
+                <button style="margin-bottom: 80px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/softuni'" >Back to SoftUni</button>
             </div>
         </div>
     </div>
