--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,25 +1,31 @@
 {{> header}}
-<div class="container">
+<div class="container array">
     <div class="row">
-        <div class="col-6 home">
+        <div class="col home" style="text-align: center; margin-top: -10px">
             <h6>HELLO, I AM</h6>
-            <h1>ALEKSANDAR<br>HRISTOV</h1>
-            <hr>
-            <p>Junior Frontend Developer</p>
-            <hr>
+            <h1>ALEKSANDAR HRISTOV</h1>
+            <div style="text-align: center">
+                <hr>
+                <p>Designer / Frontend Developer</p>
+                <hr>
+            </div>
         </div>
+    </div>
 
-        <div class="col-6">
-            <img id="avatar" src="images/Avatar-home.png" align="right">
+    <div class="row">
+        <div class="col" style="text-align: center">
+            <img id="avatar" src="images/Avatar.png" align="center">
         </div>
     </div>
     <div class="row">
-        <div class="col">
-    {{#if isAuth}}
-            <h6 style="text-align:center; color:#b7b7b7">View my portfolio <a style="color: #1A1A1A" href="#/portfolio">here</a>.</h6>
-    {{else}}
-            <h6 style="text-align:center; color:#b7b7b7">If you want to know more about me, please <a style="color: #1A1A1A" href="#/register">register</a>.</h6>
-    {{/if}}
+        <div class="col" style="margin-top: 10px">
+            {{#if isAuth}}
+                <h6 style="text-align:center; color:#b7b7b7">View my portfolio <a style="color: #1A1A1A"
+                                                                                  href="#/portfolio">here</a>.</h6>
+            {{else}}
+                <h6 style="text-align:center; color:#b7b7b7">If you want to know more about me, please <a
+                        style="color: #1A1A1A" href="#/register">register</a>.</h6>
+            {{/if}}
         </div>
     </div>
 </div>
