--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,10 +1,10 @@
 {{> header}}
 
-<div class="container login">
+<div class="container array">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <h2>Login</h2>
+            <h2 style="text-align: center">Login</h2>
             <br>
             <form action="#/login" method="POST">
                 <fieldset>
@@ -17,7 +17,9 @@
                         <input type="password" name="password" class="form-control" id="loginPassword" placeholder="">
                     </div>
                     <br>
+                    <div style="text-align: center">
                     <button type="submit" class="btn btn-outline-primary">Login</button>
+                    </div>
                 </fieldset>
             </form>
             <script>loginValidation()</script>
