--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -26,7 +26,7 @@
         <div class="col-1"></div>
         <div class="col-3 text-center">
             <h5>E-mail:</h5>
-            <img src="./images/cont.png" style="width: 173px">
+            <img src="../../../images/cont.png" style="width: 173px">
         </div>
         <div class="col-4 text-center">
             <h5>Address:</h5>
