--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -8,277 +8,95 @@
         </div>
     </div>
 
-    <!-- PM-closed -->
-    <div class="pm-closed" onclick="showJobInfo('pm')" style="display: block">
 
-        <div class="row">
+    <div class="row">
 
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">projectManager</span> =</p>
-            </div>
+        <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px; font-size: 17px">
+            <p style="margin-bottom: 5px;">const <span style="color: #1A1A1A" class="showInfo job"
+                                                       onclick="showJobInfo('pm')">projectManager =</span></p>
+        </div>
 
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{...};</p>
-            </div>
-            <div class="col-3"></div>
+
+        <div class="col-6 pm-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
+            <p class="showInfo job" onclick="showJobInfo('pm')" style="margin-bottom: 5px; width: 35px">{...};</p>
+        </div>
+
+        <div class="col-6 pm-open" onclick="showJobInfo('pm')" style="display: none; padding: 2px">
+            <p style="margin-bottom: 5px; color: #1A1A1A; font-size: 17px">{</p>
+            <p style="margin-bottom: 5px">"05.2018 - 04.2019",</p>
+            <p style="margin-bottom: 5px">"PM",</p>
+            <span>"</span>
+            <ul style="padding-left: 30px; margin-top: -20px">
+                <li style="padding-bottom: 5px">Complete organization of the project timeline from beginning to end,
+                    based on the implementation deadline.
+                </li>
+                <li style="padding-bottom: 5px">Keeping in touch with customers.</li>
+                <li style="padding-bottom: 5px">Weekly reports preparation for customers with information on the current
+                    status and schedule of
+                    their projects.
+                </li>
+                <li style="padding-bottom: 5px">Presence at management briefings with completed reports on the work done
+                    and an implementation
+                    plan
+                    of the forthcoming project work according to the deadlines.
+                </li>
+                <li style="padding-bottom: 5px">Tracking of all engineering stages and their timely completion.</li>
+                <li style="padding-bottom: 5px">Production processes supervision and their timely completion
+                    tracking.
+                </li>
+                <li style="padding-bottom: 5px">Requesting and selecting transport for all materials.</li>
+                <li style="padding-bottom: 5px">Checking for missing specification items on the day of loading.</li>
+                <li style="padding-bottom: 5px">Providing tickets, lodgings and machines needed for groups of
+                    technicians in different
+                    countries.
+                </li>
+                <li style="padding-bottom: 5px">Instruction of technicians before their departure.</li>
+                <li style="padding-bottom: 5px">Available for permanent contact with groups of technicians 24/7.
+                </li>
+                <li style="padding-bottom: 5px">Where necessary, presence at the installation site for
+                    decision-making on urgent problems.
+                </li>
+                <li style="padding-bottom: 5px">Calculation of the technicians’work after completion of the
+                    project.
+                </li>
+                <li>Working in a dynamic and multicultural environment."</li>
+            </ul>
+            <span style="color: #1A1A1A; font-size: 17px">};</span>
+        </div>
+
+
+        <div class="col-3">
+            <p style="color: #1A1A1A; font-size: 18px">Projects I am proud with:</p>
+
+            <p>The Biggest Gym in the US<br>(Earth Treks Englewood)</p>
+            <iframe width="260" height="146" src="https://www.youtube.com/embed/nvKaSSG2shg" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            <hr>
+            <p>The Biggest Gym in the World<br>(Kletterzentrum - Austria)</p>
+            <iframe width="260" height="146" src="https://www.youtube.com/embed/Jvb6obg_gkU" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            <hr>
+            <p>Psicobloc Masters wall<br>(Park City, Utah, USA)</p>
+            <iframe width="260" height="146" src="https://www.youtube.com/embed/qKwrTBJDtUM" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
         </div>
 
     </div>
 
-    <!-- PM open-->
-    <div class="pm-open" onclick="showJobInfo('pm')" style="display: none">
+    <div class="row">
 
-        <div class="row">
+        <div class="col-3"></div>
 
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">projectManager</span> =</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{</p>
-            </div>
-            <div class="col-3"></div>
+        <div class="col-6 text-center">
+            <button style="margin-bottom: 80px; margin-top: 30px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/experience'" >Back to Education</button>
         </div>
 
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">period:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"05.2018 - 04.2019",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">department:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"PM",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row" style="margin-bottom: 10px">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">responsibilities:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; text-align: justify; padding: 2px">
-                <p style="margin-bottom: 5px;">"Complete organization of the project timeline from beginning to end,
-                    based on the implementation deadline.<br>
-                    Keeping in touch with customers.<br>
-                    Weekly reports preparation for customers with information on the current status and schedule of
-                    their projects.<br>
-                    Presence at management briefings with completed reports on the work done and an implementation plan
-                    of the forthcoming project work according to the deadlines.<br>
-                    Tracking of all engineering stages and their timely completion.<br>
-                    Production processes supervision and their timely completion tracking.<br>
-                    Requesting and selecting transport for all materials.<br>
-                    Checking for missing specification items on the day of loading.<br>
-                    Providing tickets, lodgings and machines needed for groups of technicians in different
-                    countries.<br>
-                    Instruction of technicians before their departure.<br>
-                    Available for permanent contact with groups of technicians 24/7.<br>
-                    Where necessary, presence at the installation site for decision-making on urgent problems.<br>
-                    Calculation of the technicians’work after completion of the project.<br>
-                    Working in a dynamic and multicultural environment." <br>};</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-    </div>
-
-
-    <!-- HEAD-closed -->
-    <div class="head-closed" onclick="showJobInfo('head')" style="display: block">
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">headOfDept</span> =</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{...};</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
+        <div class="col-3"></div>
 
     </div>
-
-    <!-- HEAD open-->
-    <div class="head-open" onclick="showJobInfo('head')" style="display: none">
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">headOfDept</span> =</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">period:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"04.2015 - 04.2018",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">department:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"Non-steel Constructions",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row" style="margin-bottom: 10px">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">responsibilities:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; text-align: justify; padding: 2px">
-                <p style="margin-bottom: 5px;">"Drawing up work schedules and task assignments for department employees.<br>
-                    Weekly presence at management briefings with completed work reports and an implementation plan of
-                    the forthcoming project work according to the deadlines.<br>
-                    Preparation of salaries and bonuses for department employees.<br>
-                    Selection of new employees - conducting interviews and tests.<br>
-                    Conducting trainings and creating an autonomous video training system for distance learning for new
-                    staff at the department in other countries.<br>
-                    Preparation of complete technical documentation - production and installation drawings accompanied
-                    by detailed specifications for production, loading and assembly.<br>
-                    Quality control of the entire production of the department.<br>
-                    Process Management - analyzing, automating and improving workflows to: increase productivity and
-                    reduce the possibility of errors.<br>
-                    Research and development (R & D) - creating new products and details. Implementing new technologies
-                    and refining existing ones. Testing and communicating with international laboratories to certify new
-                    products.<br>
-                    Work on implementing and deploying ERP software "SAP" in the company and creating instructions for
-                    working with the software for all managers.<br>
-                    Working with a specially developed for Walltopia CRM.<br>
-                    Daily consultations with employees in the department of urgent cases in their work.<br>
-                    In constant contact with the following departments: Engineering Department (Part Steel
-                    Construction), Design Department, Project Management, Logistics Department and Walltopia Plants, on
-                    issues related to current and future objects.<br>
-                    Communication on all projects with foreign clients and partners of the company.
-                    Permanent work with design, architecture, engineering, administration software - such as AutoCAD,
-                    AdvanceSteel, SketchUp, Excel, SAP and others.<br>
-
-                    Presence of assemblies and quality control of issued objects.<br><br>
-                    For the time as Head of Unit the results I have achieved are:<br>
-                    ✔150% increase in employee productivity, with automation and proper organization of processes.<br>
-                    ✔Reducing errors in the workflow less than 0.1%<br>
-                    ✔No delayed project and missed deadline!<br>
-                    ✔Full motivation of all employees in the department and building a team of professionals.<br>
-                    ✔Creating one of the most efficient departments in the company!" <br>};</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-    </div>
-
-
-    <!-- ENG-closed -->
-    <div class="eng-closed" onclick="showJobInfo('eng')" style="display: block">
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">engineer</span> =</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{...};</p>
-            </div>
-
-            <div class="col-3"></div>
-        </div>
-
-    </div>
-
-    <!-- ENG open-->
-    <div class="eng-open" onclick="showJobInfo('eng')" style="display: none">
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">const <span class="job">engineer</span> =</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">{</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">period:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"05.2014 - 03.2015",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">department:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; padding: 2px">
-                <p style="margin-bottom: 5px">"Non-steel Constructions",</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-        <div class="row" style="margin-bottom: 10px">
-
-            <div class="col-3" align="right" style="color: #b7b7b7; padding: 2px">
-                <p style="margin-bottom: 5px">responsibilities:</p>
-            </div>
-
-            <div class="col-6" style="color: #1A1A1A; text-align: justify; padding: 2px">
-                <p style="margin-bottom: 5px;">"Preparation of complete technical documentation - production and
-                    installation drawings accompanied by detailed specifications for production, loading and
-                    installation.<br>
-                    Research and development activity (R & D) - creating new products and details. Implementing new
-                    technologies and refining existing ones.<br>
-                    Working with a specially developed for Walltopia CRM.<br>
-                    Daily consultations with colleagues in the department of urgent cases in the work, as well as with
-                    the following departments: Engineering Department (Part Steel Construction), Design Department,
-                    Project Management, Logistics Department and Walltopia Plants.<br>
-                    Project communication with foreign clients and partners of the company.<br>
-                    Permanent work with design, architecture, engineering, administration software - such as AutoCAD,
-                    AdvanceSteel, SketchUp, Excel, SAPand others." <br>};</p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-    </div>
-
-    <div style="margin-bottom: 100px"></div>
 </div>
 
 
