--- a/views/array/education/certificate.hbs
+++ b/views/array/education/certificate.hbs
@@ -1,5 +1,5 @@
 <div id="certificate">
-    <h5 style="color: #919AA1;">Module:</h5>
+    <h5 style="color: #919AA1;">Field of Study:</h5>
     <h5>{{module}}</h5>
     <img class="cert enlarge" src="{{url.[0]}}">
     <br>
