--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -30,9 +30,8 @@
         </div>
         <div class="col-4 text-center">
             <h5>Address:</h5>
-            <p>1618 Sofia, Bulgaria</p>
-            <br>
-            <hr>
+            <p style="margin-bottom: 20px">1618 Sofia, Bulgaria</p>
+            <hr style=" margin: 5px">
         </div>
         <div class="col-3 text-center">
             <h5>Phone:</h5>
@@ -41,14 +40,16 @@
         <div class="col-1"></div>
     </div>
     <br>
-    <div class="row" style="margin-top: 10px">
+    <div class="row">
         <div class="col text-center">
-            <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank" style="text-decoration: none">
-                <img class="icons" src="./images/linkedin-icon2.png">
-            </a>
-            <a href="https://github.com/AChristoff" target="_blank" style="text-decoration: none">
-                <img class="icons" src="./images/github-icon2.png">
-            </a>
+            <img class="contact-icons" src="./images/net.png">
+            <h5>Networks:</h5>
+            <a class="job" href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank" style="text-decoration: none">
+                Linkedin
+            </a>  /
+            <a class="job" href="https://github.com/AChristoff" target="_blank" style="text-decoration: none;">
+                GitHub
+            </a></div>
         </div>
     </div>
 </div>
