--- a/views/array/experience/jobDescription.hbs
+++ b/views/array/experience/jobDescription.hbs
@@ -78,7 +78,7 @@
 
 
             <div class="col-6 eng-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
-                <p class="showInfo job" onclick="showJobInfo('eng')" style="margin-bottom: 5px; width: 35px">{...};</p>
+                <p class="showInfo" onclick="showJobInfo('eng')" style="margin-bottom: 5px; width: 35px">{...};</p>
             </div>
 
             <div class="col-6 eng-open showInfo" onclick="showJobInfo('eng')" style="display: none; padding: 2px; margin-bottom: 30px">
