--- a/styles/style.css
+++ b/styles/style.css
@@ -84,14 +84,14 @@ div#root {
 /* ------------------------------------ */
 
 /*Certificates styles*/
-div#certificates {
+div#certificates, div#projects {
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
     width: 100%;
 }
 
-div#certificate {
+div#certificate, div#project {
     display: block;
     margin: 0 auto;
     text-align: center;
@@ -176,4 +176,54 @@ div#certificate-details {
 
 .job:hover {
     color: #1A1A1A;
+}
+
+.dims {
+    width: 320px;
+    margin: 0px;
+}
+
+/*  ------------------------  */
+
+.flip-card {
+    background-color: transparent;
+    width: 320px;
+    height: 230px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+    cursor: pointer;
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+    z-index: 2;
+}
+
+.flip-card-back {
+    z-index: 10;
+    background-color: black;
+    color: white;
+    transform: rotateY(180deg);
+
 }
