--- a/views/array/experience/jobDescription.hbs
+++ b/views/array/experience/jobDescription.hbs
@@ -9,6 +9,10 @@
         </div>
     </div>
 
+
+        {{res.title}}
+    <p>123</p>
+
     {{#if vid}}
         <div class="row" style="margin-bottom: 10px">
 
