--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-6" >
             <p style="color: #1A1A1A; margin-bottom: 5px; font-size: 18px">let  skills = [</p>
-            <span> "Ability to prioritize and meet deadlines",<br>
+            <span>
                "Analytical thinking and excellent attention to detail",<br>
                "Team oriented approach",<br>
                "Motivated self starter who believes in high standards as a way of work",<br>
@@ -18,6 +18,7 @@
                "Passionate, collaborative and results oriented",<br>
                "Always open to acquire new knowledge and skills",<br>
                "Experience in a dynamic and multicultural work environment",<br>
+               "Ability to prioritize and meet deadlines"<br>
             </span>
             <p style="color: #1A1A1A; margin-bottom: 2px; font-size: 18px">];</p>
             <br>
@@ -30,37 +31,37 @@
 
         <div class="col-6 skills">
 
-            <span style="margin-bottom: 5px">JavaScript ES6</span> <span style="float: right; padding-right: 2%">80%</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-
-            <span style="margin-bottom: 5px">CSS3</span> <span style="float: right; padding-right: 2%">35%</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-
-            <span style="margin-bottom: 5px">HTML5</span> <span style="float: right; padding-right: 2%">50%</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-            <hr style="float: left; width: 98%; margin-bottom: 30px;">
-            <span style="margin-bottom: 5px;">Photoshop</span> <span style="float: right; padding-right: 2%">75%</span>
+            <span style="margin-bottom: 5px">JavaScript ES6</span> <span style="float: right; padding-right: 2%">Advanced</span>
             <div class="progress" style="width: 98%; height: 10px">
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
                      aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
 
-            <span style="margin-bottom: 5px">CorelDRAW</span> <span style="float: right; padding-right: 2%">40%</span>
+            <span style="margin-bottom: 5px">CSS3</span> <span style="float: right; padding-right: 2%">Beginner</span>
             <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 40%" aria-valuenow="10"
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+
+            <span style="margin-bottom: 5px">HTML5</span> <span style="float: right; padding-right: 2%">Intermediate</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+            <hr style="float: left; width: 98%; margin-bottom: 30px;">
+            <span style="margin-bottom: 5px;">Photoshop</span> <span style="float: right; padding-right: 2%">Proficiency</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+
+            <span style="margin-bottom: 5px">CorelDRAW</span> <span style="float: right; padding-right: 2%">Intermediate</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
                      aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
