--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ footer {
     border-top: solid #E5E5E5 1px;
     position: relative;
     bottom: 0;
-    margin-top: -37px;
+    margin-top: 0px;
     text-align: center;
     text-transform: uppercase;
     font-size: 11px;
@@ -81,6 +81,20 @@ div#root {
     width: 50px;
 }
 
+
+#view {
+    border: solid white;
+    color: white;
+}
+
+
+#view:hover {
+    border: solid white;
+    background-color: white;
+    color: #1A1A1A;
+}
+
+
 /* ------------------------------------ */
 
 /*Certificates styles*/
@@ -141,6 +155,8 @@ div#certificate-details {
 }
 
 #nav {
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 0px;
     padding-right: 0px;
     border-left: none;
@@ -205,7 +221,7 @@ div#certificate-details {
 }
 
 .flip-card:hover .flip-card-inner {
-    cursor: pointer;
+    cursor: default;
     transform: rotateY(180deg);
 }
 
