--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -11,10 +11,10 @@
     <div class="row">
         <div class="col-1"></div>
         <div class="col-3 text-center">
-            <img class="contact-icons" src="./images/letter.png">
+            <img class="contact-icons" src="./images/place-marker.png">
         </div>
         <div class="col-4 text-center">
-            <img class="contact-icons" src="./images/place-marker.png">
+            <img class="contact-icons" src="./images/letter.png">
         </div>
         <div class="col-3 text-center">
             <img class="contact-icons" src="./images/smartphone.png">
@@ -25,13 +25,13 @@
     <div class="row">
         <div class="col-1"></div>
         <div class="col-3 text-center">
-            <h5>E-mail:</h5>
-            <img src="./images/e.png" style="width: 173px">
-        </div>
-        <div class="col-4 text-center">
             <h5>Address:</h5>
             <p style="margin-bottom: 20px">1618 Sofia, Bulgaria</p>
-            <hr style=" margin: 5px">
+        </div>
+        <div class="col-4 text-center">
+            <h5>E-mail:</h5>
+            <img src="./images/e.png" style="width: 173px">
+
         </div>
         <div class="col-3 text-center">
             <h5>Phone:</h5>
@@ -40,18 +40,28 @@
         <div class="col-1"></div>
     </div>
     <br>
-    <div class="row">
+   <!--<div class="row">
         <div class="col text-center">
             <img class="contact-icons" src="./images/net.png">
             <h5>Networks:</h5>
-            <a class="job" href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank" style="text-decoration: none">
+            <a class="job" href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank"
+               style="text-decoration: none">
                 Linkedin
-            </a>  /
+            </a> /
             <a class="job" href="https://github.com/AChristoff" target="_blank" style="text-decoration: none;">
                 GitHub
-            </a></div>
+            </a>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col text-center">
+            <button style="margin-top: -10px" type="button" class="btn btn-outline-primary btn-sm"
+                    onclick="window.location.href='#/message'">Contact the source
+            </button>
+        </div>
+    </div>-->
+
 </div>
 
 {{> footer}}
