--- a/views/array/education/certificate.hbs
+++ b/views/array/education/certificate.hbs
@@ -1,8 +1,5 @@
 <div id="certificate">
     <h5 style="color: #919AA1;">Field of Study:</h5>
     <h5>{{module}}</h5>
-    <img class="cert enlarge" src="{{url.[0]}}">
-    <br>
-    <br>
-    <button style="margin-bottom: 50px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/details/{{_id}}'">Details</button>
+    <img class="cert enlarge" src="{{url.[0]}}" onclick="window.location.href='#/details/{{_id}}'" style="margin-bottom: 50px">
 </div>
