--- a/views/array/experience/jobDescription.hbs
+++ b/views/array/experience/jobDescription.hbs
@@ -18,7 +18,8 @@
             </div>
 
             <div class="col-6 pm-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
-                <p class="showInfo" onclick="showJobInfo('pm')" style="margin-bottom: 5px; width: 35px">{...};</p>
+                <span class="showInfo" onclick="showJobInfo('pm')" style="margin-bottom: 5px; width: 35px">{
+                    <span class="moreInfo"> more... </span> };</span>
             </div>
 
             <div class="col-6 pm-open showInfo" onclick="showJobInfo('pm')" style="display: none; padding: 2px; margin-bottom: 20px">
@@ -48,7 +49,8 @@
 
 
         <div class="col-6 head-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
-            <p class="showInfo" onclick="showJobInfo('head')" style="margin-bottom: 5px; width: 35px">{...};</p>
+            <span class="showInfo" onclick="showJobInfo('head')" style="margin-bottom: 5px; width: 35px">{
+                <span class="moreInfo"> more... </span> };</span>
         </div>
 
         <div class="col-6 head-open showInfo" onclick="showJobInfo('head')" style="display: none; padding: 2px; margin-bottom: 20px">
@@ -78,7 +80,8 @@
 
 
             <div class="col-6 eng-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
-                <p class="showInfo" onclick="showJobInfo('eng')" style="margin-bottom: 5px; width: 35px">{...};</p>
+                <span class="showInfo" onclick="showJobInfo('eng')" style="margin-bottom: 5px; width: 35px">{
+                    <span class="moreInfo"> more... </span> };</span>
             </div>
 
             <div class="col-6 eng-open showInfo" onclick="showJobInfo('eng')" style="display: none; padding: 2px; margin-bottom: 30px">
@@ -136,7 +139,7 @@
             </div>
 
             <div class="col-6 pm-closed" style="color: #1A1A1A; padding: 2px; font-size: 17px; display: block">
-                <p class="showInfo" onclick="showJobInfo('pm')" style="margin-bottom: 5px; width: 35px">{...};</p>
+                <span class="showInfo" onclick="showJobInfo('pm')" style="margin-bottom: 5px; width: 35px">{<span class="moreInfo"> more... </span> };</span>
             </div>
 
             <div class="col-6 pm-open showInfo" onclick="showJobInfo('pm')" style="display: none; padding: 2px; margin-bottom: 20px">
