--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -22,6 +22,9 @@
                     </div>
                 </fieldset>
             </form>
+
+            <h6 style="text-align:center; color:#b7b7b7; margin-top: 60px; font-style: italic;">Don't have an account? <br> Sign up <a
+                    style="color: #1A1A1A" href="#/register">here</a>!</h6>
             <script>loginValidation()</script>
         </div>
         <div class="col-4"></div>
