--- a/views/array/education/ltu.hbs
+++ b/views/array/education/ltu.hbs
@@ -12,6 +12,7 @@
                     {{/if}}
                 {{/each}}
             </div>
+            <button style="margin-bottom: 80px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/education'" >Back to Education</button>
         </div>
     </div>
 </div>
