--- a/views/array/experience/jobs.hbs
+++ b/views/array/experience/jobs.hbs
@@ -1,10 +1,8 @@
 <div class="row">
-    <div class="col-3"></div>
-    <div class="col-6" style="margin-bottom: 20px">
-        <img src="{{logo}}" style="width: 170px; margin-right: 10px">
-        <button type="button" class="btn btn-outline-primary btn-sm"
-                onclick="window.location.href='#/job-description/{{_id}}'">More info
-        </button>
+    <div class="col-4"></div>
+    <div class="col-4" style="margin-bottom: 10px">
+        <p class="years">{{date}}</p>
+        <img class="enlarge-B" src="{{logo}}" onclick="window.location.href='#/job-description/{{_id}}'">
     </div>
-    <div class="col-3"></div>
+    <div class="col-4"></div>
 </div>
