--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,23 @@ div#certificate-details {
     box-shadow: 0 0 3px 2px rgba(183, 183, 183, 0.5);
 }
 
+.enlarge-B {
+    width: 170px;
+    transition: transform 0.25s ease;
+    background: white;
+    box-shadow: 0 0 3px 2px rgba(183, 183, 183, 0.5);
+    padding: 12px;
+}
+
+.enlarge-B:hover {
+    width: 170px;
+    cursor: pointer;
+    padding: 12px;
+    -webkit-transform: scale(1.2); /* or some other value */
+    transform: scale(1.2);
+    box-shadow: 0 0 3px 2px rgba(183, 183, 183, 0.5);
+}
+
 .verify {
     margin-bottom: 40px;
     font-size: 15px;
@@ -263,6 +280,11 @@ div#certificate-details {
 .dims {
     width: 320px;
     margin: 0px;
+}
+
+.years {
+    margin-bottom: 10px;
+    font-size: 12px;
 }
 
 
