--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -5,7 +5,7 @@
             <h2>Portfolio</h2>
             <br>
             <br>
-            <div id="projects" style="padding-left: 70px">
+            <div id="projects">
                 {{# each projects}}
                     {{> project}}
                 {{/each}}
