--- a/styles/notifications.css
+++ b/styles/notifications.css
@@ -25,7 +25,7 @@
     font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     border: solid #E5E5E5 1px;
     background: white;
-    color: #1A1A1A;
+    color: #b5b6b6;
 }
 
 #infoBox > span {
