page loading animation

--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -40,27 +40,15 @@
         <div class="col-1"></div>
     </div>
     <br>
-   <!--<div class="row">
-        <div class="col text-center">
-            <img class="contact-icons" src="./images/net.png">
-            <h5>Networks:</h5>
-            <a class="job" href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank"
-               style="text-decoration: none">
-                Linkedin
-            </a> /
-            <a class="job" href="https://github.com/AChristoff" target="_blank" style="text-decoration: none;">
-                GitHub
-            </a>
-        </div>
-    </div>
-
+   <!--
     <div class="row">
         <div class="col text-center">
-            <button style="margin-top: -10px" type="button" class="btn btn-outline-primary btn-sm"
-                    onclick="window.location.href='#/message'">Contact the source
+            <button style="margin-top: -10px" type="button" class="btn btn-primary btn-sm"
+                    onclick="window.location.href='#/message'">message me
             </button>
         </div>
-    </div>-->
+    </div>
+    -->
 
 </div>
 
