--- a/views/array/contacts/message.hbs
+++ b/views/array/contacts/message.hbs
@@ -5,7 +5,7 @@
         <div class="col-3"></div>
 
         <div class="col-6">
-            <h2 style="margin-bottom: 20px; text-align: center">Contact the source</h2>
+            <h2 style="margin-bottom: 20px; text-align: center">Message</h2>
             <br>
             <form id="jquery_form">
 
@@ -20,7 +20,7 @@
                 </div>
                 <!--<div style="margin-top: 35px" class="g-recaptcha" data-sitekey="6Lc6MqIUAAAAAPMkwoDPvX1s_3JTXoYnbMWUDFS0"></div>-->
                 <div style="text-align: center; margin: 35px">
-                    <button id="sendBtn" name="send" type="submit" class="btn btn-outline-primary">Send message</button>
+                    <button id="sendBtn" name="send" type="submit" class="btn btn-outline-primary">Send</button>
                 </div>
 
             </form>
