page loading animation

--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -40,9 +40,9 @@
                 <ul class="navbar-nav mr-auto align-right">
                     <div class="collapse navbar-collapse nav-buttons" id="navbarColor03">
                         {{#if isAuth}}
-                            <li><a class="nav-no-link welcome let">// Welcome,</a></li>
+                            <li><a class="nav-no-link welcome let">Welcome,</a></li>
                             <li><a class="nav-no-link welcome">{{username}}</a></li>
-                            <li><a class="nav-link" href="#/logout">Logout</a></li>
+                            <li><a class="nav-link" href="#/logout">// Logout</a></li>
                         {{else}}
 
                             <li><a class="nav-link" href="#/login" style="margin-right: 10px">Login</a></li>
